--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -110,3 +110,28 @@ ul {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.ellipsis-filter {
+  display: inline-block;
+  width: 100%; /* 自定义容器宽度 */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.fade-right-enter-from,
+.fade-right-leave-to {
+  transform: translateX(20px);
+  opacity: 0;
+}
+
+.fade-right-enter-active,
+.fade-right-right-leave-active {
+  transition: all 1.2s;
+}
+
+.fade-right-enter-to,
+.fade-right-eave-from {
+  transform: none;
+  opacity: 1;
+}
